--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "mongoose": "^4.13.5",
     "mongoose-id-validator": "^0.4.3",
     "morgan": "^1.9.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^3.0.1",
     "rxjs": "^5.5.2",
     "slug": "^0.9.1",
     "tether": "1.4.0",
