Add Base service Client Youtube Controller in server

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGODB_URI=mongodb://localhost:27017/ukulele-bot-web-interface
 MONGODB_TEST_URI=mongodb://localhost:27017/ukulele-bot-web-interface-test
 SECRET_TOKEN=ukulelewillruletheworld
+YOUTUBE_API_KEY=AIzaSyCARomDIJXgWOxfhgDaICmA76iZmV05_zk
