--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "rxjs": "^5.5.2",
     "slug": "^0.9.1",
     "tether": "1.4.0",
+    "youtube-search": "^1.0.10",
     "zone.js": "^0.8.18"
   },
   "devDependencies": {
